fix: chenge z-index at banner

--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -10,7 +10,7 @@
     position: absolute;
     top: 30%;
     left: 20%;
-    z-index: 10;
+    z-index: 8;
 
     @include view(mobile) {
       top: 15%;
